add sdk update for push notifications
