# openapi.yaml
@@ -469,7 +469,7 @@ components:
         - read
         - createdAt
         - updatedAt
-      description: PlomerNotification represents a system message or alert for a user
+      description: Plomer Notification represents a system message or alert for a user
       example:
         id: 1
         accountId: 1
@@ -929,6 +929,50 @@ paths:
               schema:
                 $ref: "#/components/schemas/RegistrarData"
   /notification:
+    post:
+      operationId: createNotification
+      summary: Create notification
+      tags:
+        - Notification
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                text:
+                  type: string
+                type:
+                  type: string
+                  enum:
+                    - DOMAIN_EXPIRY
+                    - SSL_EXPIRY
+                    - WEBSITE_DOWN
+                    - CONTENT_CHANGE
+                    - SYSTEM
+              required:
+                - text
+                - type
+        required: true
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PlomerNotification"
+        "401":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     get:
       operationId: getNotifications
       summary: Get notifications
